# TEST-3

./: ArmorDetector.cpp  CMakeLists.txt  README.md  main.cpp  numeric_rm.cpp
include/: ArmorDetector.h  numeric_rm.h  opencv_extended.h
